--- a/pages/About.html
+++ b/pages/About.html
@@ -36,7 +36,7 @@
   </div>
   
   <h2 style="text-align:center">About</h2>
-  <div class="row" style="display: flex;
+  <div class="row" style="display: flex,
   align-items: center;">
     <div class="column" style="padding-left: 0;">
       <div class="card" style="text-align:center">
