--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -31,7 +31,7 @@
 </div>
 <div class="about-section">
   <h1>Contact Me On</h1>
-  <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="download.png"></a>
+  <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif"></a>
   <a href="https://www.instagram.com/ankit.rojasara.10/"><h3>ankit.rojasara.10</h3></a>
 </div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
