--- a/pages/feed.html
+++ b/pages/feed.html
@@ -3,6 +3,7 @@
 <head>
 <title>Ankit | Feedback
 </title>
+<link rel="icon" type="image/x-icon" href="../images/demo/icon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
