--- a/pages/About.html
+++ b/pages/About.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <title>Ankit | About</title>
+<link rel="icon" type="image/x-icon" href="../images/demo/icon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body id="top">
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" > 
+<div class="bgded overlay bg-dark" > 
   <div class="wrapper row1">
     <header id="header" class="hoc clear"> 
       <div id="logo" class="fl_left">
@@ -33,15 +35,15 @@
     <h1>About Us Page</h1>
     <p>A College Student</p>
     <p>Coding , Also Like Ethical Hacking</p>
-  </div>
   
+</div>
+<div class="about-section bg-dark">
   <h2 style="text-align:center">About</h2>
-  <div class="row" style="display: flex,
-  align-items: center;">
-    <div class="column" style="padding-left: 0;">
-      <div class="card" style="text-align:center">
+  <div class="d-flex justify-content-center">
+    <div class="column " style="padding-left: 0;">
+      <div class="card border border-secondary border-3" style="text-align:center">
         <img src="IMG_20230328_174431.jpg" alt="none  " style="width:100%">
-        <div class="container">
+        <div class="container bg-dark">
           <h2>Ankit Rojasara</h2>
           <p class="title">Web Devlopment</p>
           <p>Web Devloper, <br> Student, <br> Treiner,  Farmer<br> Business Man 
@@ -52,8 +54,8 @@
       </div>
     </div>
   
-    
   </div>
+</div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
 <script src="../layout/scripts/jquery.min.js"></script>
