--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <title>Ankit | Contact</title>
+<link rel="icon" type="image/x-icon" href="../images/demo/icon.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body id="top">
 <!-- Top Background Image Wrapper -->
@@ -29,12 +31,19 @@
   </section>
   <!-- ################################################################################################ -->
 </div>
-<div class="about-section">
-  <h1>Contact Me On</h1>
-  <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif"></a>
-  <a href="https://www.instagram.com/ankit.rojasara.10/"><h3>ankit.rojasara.10</h3></a>
+<div class="row">
+  <div class="about-section bg-dark col">
+    <h1>Contact Me On</h1>
+    <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif" class="img-thumbnail rounded float-left bg-dark border-0"></a>
+    <a href="https://www.instagram.com/ankit.rojasara.10/" class="text-center font-weight-light"><h3>ankit.rojasara.10</h3></a>
+  </div>
+  <div class="about-section bg-dark col">
+    <!-- <h1>Contact Me On</h1> -->
+    <!-- <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif" class="img-fluid"></a>
+    <a href="https://www.instagram.com/ankit.rojasara.10/"><h3>ankit.rojasara.10</h3></a> -->
+  </div>
+  <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 </div>
-<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
 <script src="../layout/scripts/jquery.min.js"></script>
 <script src="../layout/scripts/jquery.backtotop.js"></script>
