--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -54,6 +54,11 @@ Licence URI: http://www.os-templates.com/template-terms
         <figure>
           <header class="heading">Enjoy In Summer</header>
           <ul class="nospace clear">
+            <!-- <li class="one_quarter first">
+              <video width="320" height="240" controls autoplay>
+              <source src="movie.mp4" type="video/mp4">
+              </video>
+            </li> -->
             <li class="one_quarter first"><a href="https://www.google.com/maps/place/Diu,+Dadra+and+Nagar+Haveli+and+Daman+and+Diu+362520/@20.7142177,70.6981664,10z/data=!4m15!1m8!3m7!1s0x3be31ce77c7a67bf:0x4664503a0396202!2sDiu,+Dadra+and+Nagar+Haveli+and+Daman+and+Diu+362520!3b1!8m2!3d20.7144094!4d70.9873719!16s%2Fm%2F0h1fl2d!3m5!1s0x3be31ce77c7a67bf:0x4664503a0396202!8m2!3d20.7144094!4d70.9873719!16s%2Fm%2F0h1fl2d"><img src="../images/demo/gallery/IMG_0203.jpeg" alt="Something Erore"></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/p1.jpg" alt="Something Erore"></a></li>
             <li class="one_quarter"><a href="#"><img src="../images/demo/gallery/p2.jpg" alt="Something Erore"></a></li>
