--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -8,7 +8,7 @@
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body id="top">
+<body id="top" class="bg-dark">
 <!-- Top Background Image Wrapper -->
 <div class="bgded overlay" > 
   <div class="wrapper row1">
@@ -31,19 +31,42 @@
   </section>
   <!-- ################################################################################################ -->
 </div>
-<div class="row">
-  <div class="about-section bg-dark col">
-    <h1>Contact Me On</h1>
-    <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif" class="img-thumbnail rounded float-left bg-dark border-0"></a>
-    <a href="https://www.instagram.com/ankit.rojasara.10/" class="text-center font-weight-light"><h3>ankit.rojasara.10</h3></a>
+
+<div class="row bg-dark">
+  <div class="col-md-6">
+    <div class="about-section bg-dark">
+      <div class="d-flex justify-content-center">
+        
+          <div class="card border border-secondary border-3" style="text-align:center">
+            <img src="IMG_20230328_174432.gif" alt="none  " style="width:100%">
+            <div class="container bg-dark">
+              <h2>Ankit Rojasara</h2>
+              <p class="title">Web Devlopment</p>
+              <p>Web Devloper, <br> Student, <br> Treiner,  Farmer<br> Business Man 
+              </p>
+              <p>ankitrojasara123@gmail.com</p>
+            </div>
+          </div>
+        
+      </div>
+    </div>
   </div>
-  <div class="about-section bg-dark col">
-    <!-- <h1>Contact Me On</h1> -->
-    <!-- <a href="https://www.instagram.com/ankit.rojasara.10/"><img src="insta.gif" class="img-fluid"></a>
-    <a href="https://www.instagram.com/ankit.rojasara.10/"><h3>ankit.rojasara.10</h3></a> -->
+  <div class="col-md-6">
+    <h1 class="center bg-dark text-white mt-5">Contact Me On</h1>
+    <div class="about-section bg-dark col">
+      <a href="https://www.instagram.com/ankit.rojasara.10/" target="_blank"><img src="insta.gif" class="img-thumbnail rounded float-left bg-dark border-0"></a>
+    </div>
+    <div class="about-section bg-dark col">
+      <!-- <h1>Contact Me On</h1> -->
+      <a href="https://www.facebook.com/ankit.rojasara.10/"  target="_blank"><img src="IMG_20230328_174433.gif" class="img-fluid"></a>
+    </div>
+    <div class="about-section bg-dark col">
+      <!-- <a href="https://www.facebook.com/ankit.rojasara.10/"><h3>ankit.rojasara.10</h3></a> -->
+    </div>
+    <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
   </div>
-  <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 </div>
+<hr>
 <!-- JAVASCRIPTS -->
 <script src="../layout/scripts/jquery.min.js"></script>
 <script src="../layout/scripts/jquery.backtotop.js"></script>
